# blukpast

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  THIRD_PARTY_NOTICES  blukpast.c  gmon.out
.github/workflows/: docs.yml
cmake/: copy_gltf.cmake
docs/: header.html
gfx/: bkp_font.c
gfx/include/: bkp_font.h  gfx.h
gfx/vulkan/: pipelines_helper.c  vkAllocator.c  vk_buffer.c  vk_cmd.c  vk_info.c  vk_pipeline.c  vk_shader_module.c  vk_texture_batch.c  vulkan.c
gfx/vulkan/include/: pipelines_helper.h  vkAllocator.h  vk_buffer.h  vk_cmd.h  vk_info.h  vk_models.h  vk_pipeline.h  vk_shader_module.h  vk_types.h  vulkan.h
gfx/window_manager/: windowing.c
gfx/window_manager/include/: windowing.h
include/: blukpast.h  type.h
loaders/: bkp_loader_gltf.c  bkp_loader_obj.c  bkp_loader_ply.c  bkp_loader_stl.c  bkp_loaders.c
loaders/include/: bkp_loaders.h
math/: basics.c  bkp_float.c  bkp_linear_algebra2D.c  bkp_linear_algebra3D.c  bkp_mat.c  bkp_vect.c  bkp_vertex_geometries.c
math/include/: basics.h  bkp_float.h  bkp_linear_algebra.h  bkp_mat.h  bkp_vect.h  bkp_vertex_geometries.h  bkpmath.h
system/: bkp_allocator.c  bkp_array.c  bkp_container_functions.c  bkp_fs.c  bkp_hash.c  bkp_input.c  bkp_list.c  bkp_log.c  bkp_map.c  bkp_path.c  bkp_random.c  bkp_stack.c  bkp_string.c  bkp_systemTime.c  bkp_thread.c  bkp_utf8.c
system/include/: bkp_allocator.h  bkp_array.h  bkp_array_f.h  bkp_bool.h  bkp_container_functions.h  bkp_export.h  bkp_fs.h  bkp_hash.h  bkp_input.h  bkp_list.h  bkp_list_f.h  bkp_log.h  bkp_map.h  bkp_map_f.h  bkp_path.h  bkp_random.h  bkp_stack.h  bkp_stack_f.h  bkp_string.h  bkp_systemTime.h  bkp_thread.h  bkp_utf8.h  macro.h
tutorial/00_hello_world/: README.md  main.c
tutorial/00_hello_world/shaders/: sphere.frag  sphere.vert  triangle.frag  triangle.vert
tutorial/01_playground/: README.md  main.c
tutorial/01_playground/shaders/: scene.frag
tutorial/02_camera/: README.md  main.c
tutorial/02_camera/shaders/: scene.frag  sky.frag  sky.vert
tutorial/03_pbr_ibl/: README.md  ibl.c  ibl.h  main.c
tutorial/03_pbr_ibl/shaders/: scene.frag  scene.vert  sky.frag  sky.vert
tutorial/04_font_input/: README.md  main.c
tutorial/04_font_input/shaders/: hud.frag  hud.vert  rect.frag  rect.vert
tutorial/05_shadow_map/: README.md  main.c
tutorial/05_shadow_map/shaders/: scene.vert  shadow.vert
tutorial/06_floor_reflection/: main.c
tutorial/06_floor_reflection/shaders/: floor.vert
tutorial/07_animations/: README.md  main.c
tutorial/08_deformation/: main.c
tutorial/08_deformation/shaders/: scene.frag
tutorial/09_destruction/: main.c
tutorial/09_destruction/shaders/: explosion.comp  floor.frag  particle.frag  particle.vert  reflect.vert
tutorial/common/: free_camera.h  hud.c  hud.h  scene.c  scene.h
tutorial/gltf/: sphere.glb
